# VRSFML

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN.md  Dockerfile  changelog.md  clangformat_everthing.sh  compile_commands.json  license.md  lsan_suppressions.txt  memberguard.hpp  migration.md  readme.md  run_all_examples.sh  run_all_tests.sh  run_emscripten_example.sh  run_emscripten_example_linux.sh  run_emscripten_example_rel.sh  run_emscripten_test.sh  run_example.sh  run_example_demo.sh  run_example_gdb.sh  run_example_linux.sh  run_example_lldb.sh  run_test.sh  run_test_gdb.sh  sfml_docs.patch  vrsfml_migration.md
examples/: CMakeLists.txt
examples/X11/: X11.cpp
examples/arkanoid/: Arkanoid.cpp  CMakeLists.txt
examples/batching/: Batching.cpp  CMakeLists.txt  imgui.ini
examples/batching_benchmark/: BatchingBenchmark.cpp  CMakeLists.txt
examples/block_puzzle/: BlockPuzzle.cpp  CMakeLists.txt
examples/bubble_idle/: Achievements.hpp  Aliases.hpp  AssertAssume.hpp  Bubble.hpp  BubbleByteUI.cpp  BubbleIdle.cpp  BubbleIdleApp.hpp  BubbleIdleMain.cpp  BubbleIdleMain.hpp  BubbleType.hpp  CMakeLists.txt  Cat.hpp  CatConstants.hpp  CatNames.cpp  CatNames.hpp  CatType.hpp  Collision.hpp  ComboState.hpp  Common.hpp  Constants.hpp  ControlFlow.hpp  Countdown.hpp  Doll.hpp  Easing.hpp  ExactArray.hpp  Game.hpp  GameConstants.hpp  GameEvent.hpp  GameRender.cpp  GameUpdate.cpp  GrowthFactors.hpp  HellPortal.hpp  HexSession.hpp  HueColor.hpp  IconsFontAwesome6.h  ImGuiNotify.hpp  InputHelper.cpp  InputHelper.hpp  InputState.cpp  InputState.hpp  (+92 more)
examples/cocoa/: CocoaAppDelegate.h  CocoaAppDelegate.mm  NSString+stdstring.h  NSString+stdstring.mm  main.m
examples/coroutine/: CMakeLists.txt  Coroutine.cpp
examples/event_handling/: EventHandling.cpp
examples/flocking/: Flocking.cpp  FlockingAOS.cpp  FlockingOOP.cpp
examples/flockingAOS/: FlockingAOS.cpp  FlockingOld.cpp  FlockingOld2.cpp
examples/flockingOOP/: CMakeLists.txt  Flocking3.cpp  FlockingOOP.cpp
examples/font_lifetime/: CMakeLists.txt  FontLifetime.cpp
examples/ftp/: Ftp.cpp
examples/http/: Http.cpp
examples/imgui_minimal/: CMakeLists.txt  ImGuiMinimal.cpp  imgui.ini
examples/imgui_multiple_windows/: CMakeLists.txt  ImGuiMultipleWindows.cpp  imgui.ini
examples/imguipfr/: CMakeLists.txt  ImGuiPFR.cpp
examples/include/: ExampleUtils.hpp  Profiler.hpp  ProfilerImGui.hpp  gl.h
examples/island/: Island.cpp  stb_perlin.h
examples/joystick/: Joystick.cpp
examples/keyboard/: Keyboard.cpp
examples/opengl/: OpenGL.cpp
examples/particles/: CMakeLists.txt  Particles.cpp
examples/raw_input/: RawInput.cpp
examples/rockets/: CMakeLists.txt  Rockets.cpp  SoAPFR.hpp
examples/shader/: Effect.hpp  Shader.cpp
examples/showcase/: CMakeLists.txt  Showcase.cpp  ShowcaseAudio.cpp  ShowcaseAudio.hpp  ShowcaseBunnyMark.cpp  ShowcaseBunnyMark.hpp  ShowcaseExample.hpp  ShowcaseIndividualShape.cpp  ShowcaseIndividualShape.hpp  ShowcaseShapes.cpp  ShowcaseShapes.hpp  ShowcaseTextComparison.cpp  ShowcaseTextComparison.hpp
examples/sockets/: Sockets.cpp  TCP.cpp  UDP.cpp
examples/sound/: Sound.cpp
examples/sound_capture/: CMakeLists.txt  SoundCapture.cpp
examples/sound_effects/: CMakeLists.txt  SoundEffects.cpp
examples/sound_multi_device/: CMakeLists.txt  SoundMultiDevice.cpp
examples/stencil/: Stencil.cpp
examples/tennis/: CMakeLists.txt  Tennis.cpp
examples/tetris_survivors/: AnimationCommands.hpp  AnimationTimeline.hpp  BitmapFont.hpp  BitmapTextAlignment.hpp  BitmapTextUtils.hpp  Block.hpp  BlockGrid.hpp  BlockMatrix.hpp  CMakeLists.txt  Constants.hpp  ControlFlow.hpp  DefaultPerks.hpp  DrillDirection.hpp  IndexUtils.hpp  LaserBeam.hpp  LaserDirection.hpp  LaserableBlocksInfo.hpp  LightningBolt.hpp  MonospaceBitmapFont.hpp  Perk.hpp  RandomBag.hpp  ShapeBlockSequence.hpp  ShapeDimension.hpp  ShapeMatrix.hpp  StringUtils.hpp  StrongTypedef.hpp  Tetramino.hpp  TetraminoShapes.hpp  TetrisSurvivors.cpp  Utils.hpp  World.hpp
examples/text/: Text.cpp
examples/text_benchmark/: CMakeLists.txt  TextBenchmark.cpp  imgui.ini
examples/voip/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  VoIP.cpp
examples/vulkan/: Vulkan.cpp  vulkan.h
examples/win32/: Win32.cpp
examples/window/: Window.cpp
examples/x11_example/: CMakeLists.txt  X11Example.cpp
extlibs/libbacktrace/: CMakeLists.txt
test/: CMakeLists.txt
test/Audio/: AudioDeviceHandle.test.cpp  AudioResource.test.cpp  CMakeLists.txt  ChannelMap.test.cpp  InputSoundFile.test.cpp  Music.test.cpp  OutputSoundFile.test.cpp  Sound.test.cpp  SoundBuffer.test.cpp  SoundBufferRecorder.test.cpp  SoundFileFactory.test.cpp  SoundFileReader.test.cpp  SoundFileWriter.test.cpp  SoundRecorder.test.cpp  SoundSource.test.cpp  SoundStream.test.cpp
test/Base/: Algorithm.test.cpp  Array.test.cpp  BackInserter.test.cpp  CMakeLists.txt  ChunkedVector.test.cpp  Clamp.test.cpp  ConstexprlInPlaceVector.test.cpp  Exchange.test.cpp  FastSinCos.test.cpp  FixedFunction.test.cpp  FromChars.test.cpp  FunctionRef.test.cpp  GetArraySize.test.cpp  IntTypes.test.cpp  Math.test.cpp  MaxAlignT.test.cpp  MinMax.test.cpp  MinMaxMacros.test.cpp  MiniPFR.test.cpp  NonTrivialInPlaceVector.test.cpp  NonTrivialVector.test.cpp  Optional.test.cpp  PtrDiffT.test.cpp  SinCosLookup.test.cpp  SizeT.test.cpp  SmallVector.test.cpp  Sort.test.cpp  SourceLocation.test.cpp  Span.test.cpp  String.test.cpp  StringView.test.cpp  Swap.test.cpp  ThreadPool.test.cpp  ToChars.test.cpp  ToString.test.cpp  Traits.test.cpp  TrivialVector.test.cpp  UIntPtrT.cpp  UniquePtr.test.cpp  Variant.test.cpp
test/GLUtils/: CMakeLists.txt
test/Graphics/: BlendMode.test.cpp  CMakeLists.txt  CircleShape.test.cpp  Color.test.cpp  ConvexShape.test.cpp  CoordinateType.test.cpp  Drawable.test.cpp  Font.test.cpp  FontFace.test.cpp  GLFenceSync.test.cpp  GLPersistentBuffer.test.cpp  GLPersistentRingBuffer.test.cpp  Glsl.test.cpp  Glyph.test.cpp  GlyphMapping.test.cpp  Image.test.cpp  InstancedDraw.test.cpp  MultiContextRenderTexture.test.cpp  (+30 more)
(+1420 files in other folders)
